Fix spacing in user profile

--- a/projects/commudle-admin/src/app/feature-modules/users/components/public-profile/user-extra-details/user-content/user-social/user-social.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/users/components/public-profile/user-extra-details/user-content/user-social/user-social.component.scss
@@ -2,14 +2,11 @@
 
 .user-social {
   .header {
-    width: max-content;
-    margin: 0 0 $space-24;
-    padding-bottom: $space-8;
+    margin-bottom: $space-24;
     font-size: $fs-24;
     font-weight: $fw-600;
     line-height: 28px;
     color: $gunmetal;
-    border-bottom: 1px solid $chinese-silver;
   }
 
   .user-social-add {
